# queuack

./: .gitignore  Makefile  README.md  RELEASE_NOTES_v0.1.3.md  examples.py  pyproject.toml  run_examples.py  tox.ini
.github/: CLAUDE.md
.github/workflows/: code-quality.yml  coverage.yml  lint.yml  propose_release_pr.yml  release.yml  release_pipeline.yml  tests.yml
benchmarks/: benchmark_suite.py
docs/: RELEASE_PROCESS.md
docs/memorandum/: 202501_connection_context_standard.md  202510_airflow_assessment.md  202510_concurrency_fixes_subdag.md  202510_connection_context_standard.md  202510_context_management_assessment.md  202510_performance_bottlenecks.md  202510_project_status.md  202510_sanity_check_report.md  202510_sync_async_migration_guideline.md  README.md  airflow_comparison.md  dags.md  reviewed_airflow_assessment.md  serialization.md  sync_async_migration_guideline.md
docs/refactor_planning/: 202510_async_plus_storage_plus_generator_refactor.md  202510_october_refactor.md  202510_serialization_assessment.md
examples/: README.md  bench_submission.py
examples/01_basic/: 01_simple_queue.py  02_priority_jobs.py  03_delayed_jobs.py  04_batch_enqueue.py  05_error_handling.py  06_results_and_dlq.py  07_queue_stats.py  08_context_manager.py  09_backpressure.py  10_purging.py  README.md
examples/02_workers/: 01_single_worker.py  05_health_checks.py  (+8 more)
lab/: asyncduckdb.py
queuack/: __init__.py  constants.py  core.py  dag.py  dag_context.py  data_models.py  decorators.py  exceptions.py  job_store.py  mermaid_colors.py  status.py  streaming.py
scripts/: generate_release_notes_ai.py  propose_release_pr.py  run_examples.py  verify_release.py
tests/: test_async_task.py  test_core.py  test_dag.py  test_dag_class.py  test_dag_context.py  test_data_models.py  test_edge_cases.py  test_generators.py  test_job_store.py  test_large_dependency_path.py  test_skipped_benchmark.py  test_skipped_propagation.py  test_status.py  test_strategic_coverage.py
(+73 files in other folders)
